--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "axios": "^0.17.0",
+    "gsap": "^1.20.3",
     "nuxt": "^1.0.0-rc11"
   },
   "devDependencies": {
